--- a/src/app/paginas/feed/feed.component.html
+++ b/src/app/paginas/feed/feed.component.html
@@ -1,7 +1,7 @@
 <div class="feed">
   <div class="histories-feed">
     <div class="histories">
-      <app-histories></app-histories>
+      <app-stories></app-stories>
     </div>
     <div class="feed-principal">
       <h1>Fotos do feed</h1>
