--- a/src/app/paginas/feed/feed.component.scss
+++ b/src/app/paginas/feed/feed.component.scss
@@ -4,17 +4,17 @@
   display: flex;
 
   .histories-feed {
-    width: 50%;
+    width: 55%;
     display: flex;
     flex-direction: column;
 
-    .histories {
-      border: 1px solid green;
-    }
+    // .histories {
+    //   border: 1px solid green;
+    // }
 
-    .feed-principal {
-      border: 1px solid green;
-    }
+    // .feed-principal {
+    //   border: 1px solid green;
+    // }
 
   }
 
