--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-toolbar></app-toolbar>
-<app-container></app-container>
+<div class="principal">
+  <app-toolbar></app-toolbar>
+  <app-container></app-container>
+</div>
