--- a/src/app/componentes/avatar/avatar.component.html
+++ b/src/app/componentes/avatar/avatar.component.html
@@ -1,3 +1,4 @@
-<div class="avatar">
+<div class="avatar" [style.width]="largura + 'px'" [style.height]="peso + 'px'" (click)="abrirStories()">
   <img [src]="'./assets/avatar/'+dados.img+'.jpg'" alt="avatar" />
+  <span *ngIf="mostrarNome">{{ dados.nome }}</span>
 </div>
