--- a/src/app/componentes/avatar/avatar.component.scss
+++ b/src/app/componentes/avatar/avatar.component.scss
@@ -1,8 +1,9 @@
 .avatar {
   display: flex;
   align-items: center;
-  height: 70px;
-  width: 70px;
+  flex-direction: column;
+  // height: 70px;
+  // width: 70px;
   border: 2px solid red;
   border-radius: 50px;
   margin: 20px 10px 20px 10px;
@@ -13,5 +14,6 @@
     width: 100%;
     height: 100%;
     border-radius: 50px;
+    margin-bottom: 10px;
   }
 }
