--- a/src/app/componentes/stories/stories.component.scss
+++ b/src/app/componentes/stories/stories.component.scss
@@ -1,12 +1,17 @@
 .histories {
-  height: 100px;
-  border: 1px solid red;
-
+  background-color: #FFFFFF;
   .avatar {
     display: flex;
     align-items: center;
     height: 100%;
-    border: 1px solid green;
+    border: 1px solid #dbdbdb;
+    border-radius: 5px;
+    width: 100%;
+
+    .div-avatar {
+      display: flex;
+      margin: 0 0 20px 0;
+    }
   }
 }
 
