--- a/src/app/paginas/feed/feed.component.scss
+++ b/src/app/paginas/feed/feed.component.scss
@@ -1,25 +1,16 @@
 .feed {
-  border: 1px solid blue;
-  margin-top: 30px;
   display: flex;
 
   .histories-feed {
-    width: 55%;
     display: flex;
     flex-direction: column;
-
-    // .histories {
-    //   border: 1px solid green;
-    // }
-
-    // .feed-principal {
-    //   border: 1px solid green;
-    // }
-
+    position: relative;
+    margin-right: 20px;
+    margin-top: 90px;
   }
 
   .menu-lateral-direito {
-      width: 50%;
-      border: 1px solid green;
+      width: 100%;
+      margin-top: 90px;
     }
 }
