--- a/src/app/template/toolbar/toolbar.component.scss
+++ b/src/app/template/toolbar/toolbar.component.scss
@@ -2,6 +2,10 @@
   height: 50px;
   background-color: #FFFFFF;
   border-bottom: 1px solid #DBDBDB;
+  position: fixed;
+  top: 0;
+  z-index: 999;
+  width: 100%;
 
   // Container dos itens da toolbar
   .elementos-toolbar {
