--- a/src/app/componentes/menu-lateral-direito/menu-lateral-direito.component.html
+++ b/src/app/componentes/menu-lateral-direito/menu-lateral-direito.component.html
@@ -11,7 +11,7 @@
 
   <div class="div-sugestao">
     <span class="sugestao">Sugestão para você</span>
-    <span class="ver-tudo">Ver tudo</span>
+    <span class="ver-tudo" [routerLink]="['/sugestao']">Ver tudo</span>
   </div>
 
 </div>
