--- a/src/app/template/toolbar/toolbar.component.scss
+++ b/src/app/template/toolbar/toolbar.component.scss
@@ -24,6 +24,8 @@
       justify-content: center;
       margin-top: 10px;
       width: 15%;
+      outline: none;
+      cursor: pointer;
 
       img {
         height: 70%;
@@ -49,6 +51,12 @@
           margin-right: 10px;
           list-style: none;
           cursor: pointer;
+          outline: none;
+
+          img {
+            width: 50px;
+            height: 20px;
+          }
         }
       }
     }
