Adicionado correçao de botoes do stories

--- a/src/app/componentes/setas/setas.component.scss
+++ b/src/app/componentes/setas/setas.component.scss
@@ -4,7 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: blue;
+  background-color: #FFFFFF;
+  border: 1px solid #DBDBDB;
   border-radius: 20px;
   width: 30px;
   height: 30px;
