--- a/src/app/paginas/mensagem/mensagem.component.html
+++ b/src/app/paginas/mensagem/mensagem.component.html
@@ -64,17 +64,10 @@
             </div>
           </div>
         </div>
-        <!-- <div class="user">
-          <span>_gustavodsouza</span>
-          <fa-icon class="icone-seta" [icon]="faArrow"></fa-icon>
-        </div>
-        <div class="editar">
-          <fa-icon [icon]="faEdit"></fa-icon>
-        </div> -->
       </div>
       <div class="container">
         <div class="container-mensagem">
-          <span>{{verificarMensagem().mensagem}}</span>
+          <span>Teste</span>
         </div>
         <div class="input-mensagem">
           <mat-form-field appearance="outline">
