--- a/src/app/componentes/feed-fotos/feed-fotos.component.scss
+++ b/src/app/componentes/feed-fotos/feed-fotos.component.scss
@@ -10,6 +10,7 @@
     align-items: center;
     background-color: #FFFFFF;
     height: 65px;
+    border-bottom: 1px solid #DBDBDB;
   }
 
   .foto {
