--- a/src/app/componentes/avatar/avatar.component.scss
+++ b/src/app/componentes/avatar/avatar.component.scss
@@ -2,9 +2,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  // height: 70px;
-  // width: 70px;
-  border: 2px solid red;
+  // border: 2px solid red;
   border-radius: 50px;
   margin: 20px 10px 20px 10px;
   padding: 3px;
