--- a/src/app/componentes/menu-lateral-direito/menu-lateral-direito.component.html
+++ b/src/app/componentes/menu-lateral-direito/menu-lateral-direito.component.html
@@ -1,7 +1,7 @@
 <div class="menu-lateral-direito">
   <div class="avatar">
     <div>
-      <app-avatar peso="70" largura="70" [dados]="usuarioLogado" [mostrarNome]="false"></app-avatar>
+      <app-avatar borda="bordaNormal" peso="70" largura="70" [dados]="usuarioLogado" [mostrarNome]="false"></app-avatar>
     </div>
     <div class="nomes">
       <span class="user">{{ usuarioLogado.user }}</span>
