--- a/src/app/componentes/stories/stories.component.html
+++ b/src/app/componentes/stories/stories.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="div-avatar">
       <app-avatar *ngFor="let item of dadosUsuario | slice:this.indexAtual:this.cortar()" [dados]="item"
-        [mostrarNome]="true" peso="60" largura="60"></app-avatar>
+        [mostrarNome]="true" peso="60" largura="60" (evento)="abrirStories()" borda="bordaNormal"></app-avatar>
     </div>
     <div class="seta-avanca" *ngIf="corte !== dadosUsuario.length">
       <app-setas lado="avanca" [(indexAtual)]="indexAtual" [(tamanho)]="dadosUsuario.length" [(corte)]="corte"
